kubernetes/insurance-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-deployment
  namespace: insurance
  labels:
    deploy: insurance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insurance
  template:
    metadata:
      labels:
        app: insurance
    spec:
      containers:
      - image: "registryxyo7426.azurecr.io/insurance:1.0"
        imagePullPolicy: Always
        name: insurance
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 2048Mi
---
apiVersion: v1
kind: Service
metadata:
  name: insurance
  namespace: insurance
spec:
  type: ClusterIP
  selector:
    app: insurance
  ports:
  - protocol: TCP
    name: insurance-http
    port: 80
    targetPort: 8081
