kubernetes/trips.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: trips
        image: registryxyo7426.azurecr.io/tripinsights/trips:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: trips
