kubernetes/user-java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: user-java
        image: registryxyo7426.azurecr.io/tripinsights/user-java:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: user-java
