kubernetes/tripsviewer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripsviewer-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer
            port:
              number: 80
